--- a/src/css/SignUpForm.css
+++ b/src/css/SignUpForm.css
@@ -1,9 +1,58 @@
+/* SignUpForm.module.css */
+
+/* SignUpForm.css */
 .signup-form {
-  max-width: 400px;
+  max-width: 50%; /* Adjust the value as needed */
   margin: 0 auto;
   padding: 20px;
-  background-color: #f7f7f7;
+  background-color: #ffa94d;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  display: flex; /* Add flex display */
+  flex-direction: column; /* Make sure children stack vertically */
+  align-items: center; /* Center children horizontally */
+}
+
+.signup-form h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.signup-form label {
+  display: block;
+  font-weight: 500;
+  margin-bottom: 8px;
+}
+
+.signup-form input[type="text"],
+.signup-form input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.signup-form button {
+  width: 50%; /* Adjust the button width as needed */
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.signup-form button:hover {
+  background-color: #0056b3;
+}
+
+/* Additional styles for the label class */
+.label {
+  font-weight: 500;
+  color: #555; /* Change label text color */
 }
