Added hover effect

--- a/src/css/store-item.css
+++ b/src/css/store-item.css
@@ -5,9 +5,12 @@
   cursor: pointer;
   margin: 0 auto; /* Center the container horizontally */
   padding: 20px; /* Add some padding around the items */
-  border: 1px solid #ccc; /* Optional: Add a border around the container */
-  background-color: antiquewhite;
+  transition: background-color 0.3s ease;
+  /* border: 1px solid #ccc; Optional: Add a border around the container */
   border-radius: 8px; /* Optional: Add rounded corners to the container */
+}
+.store-item:hover {
+  background-color: #2980b9;
 }
 .product-image {
   max-width: 100%; /* Set the maximum width to 100% of the container */
