--- a/src/css/ItemDisplayPurchase.css
+++ b/src/css/ItemDisplayPurchase.css
@@ -1,6 +1,6 @@
 .store-purchase-item {
   display: grid;
-  grid-template-columns: 150px 1fr; /* Creates two columns of equal width */
+  grid-template-columns: 150px 1fr 1fr; /* Creates two columns of equal width */
   grid-template-rows: 100px auto; /* Creates two rows, with the second row auto-sized */
   max-width: 80%; /* Adjust the maximum width as needed */
   padding: 10px;
@@ -21,7 +21,7 @@
 }
 
 .product-price {
-  grid-column: 2; /* Places item in the second column */
+  grid-column: 3; /* Places item in the second column */
   grid-row: 2; /* Places item in the second row */
   font-weight: bold;
   justify-self: end;
@@ -48,4 +48,14 @@
   position: absolute;
   bottom: 20px; /* Positioned beneath the Total text */
   right: 20px;
+}
+.red-x {
+  color: red;
+  font-size: 24px;
+  font-weight: bold;
+  background-color: white;
+  border: none;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
 }
