--- a/src/css/checkout.css
+++ b/src/css/checkout.css
@@ -1,10 +1,12 @@
 .checkout-step {
-  max-width: 400px;
+  max-width: 50%; /* Set maximum width to 50% of the page */
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
   background-color: #f9f9f9;
+  display: flex; /* Use flexbox to control layout */
+  flex-direction: column; /* Arrange items in a column */
 }
 
 .form-group {
@@ -18,12 +20,13 @@ label {
 
 input[type="text"] {
   width: 100%;
-  padding: 8px;
+  padding: 5px;
+
   border: 1px solid #ccc;
   border-radius: 4px;
 }
 
-button {
+.checkout-button {
   padding: 10px 20px;
   margin-right: 10px;
   background-color: #007bff;
@@ -32,7 +35,14 @@ button {
   border-radius: 4px;
   cursor: pointer;
 }
-
+.checkout-button-next {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
 button:hover {
   background-color: #0056b3;
 }
