--- a/src/css/Home/HomeProductDisplay.css
+++ b/src/css/Home/HomeProductDisplay.css
@@ -1,3 +1,16 @@
+.page-container {
+  padding-top: 15px;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+}
+
+.store-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 16px; /* Adjust the gap between items as needed */
+  width: 100%;
+}
 .item-display {
   margin-bottom: 10px;
 }
