--- a/src/css/Home/home-product-display.css
+++ b/src/css/Home/home-product-display.css
@@ -1,6 +1,5 @@
 .page-container {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,4 +12,13 @@
   grid-template-columns: repeat(5, 1fr);
   row-gap: 20px;
   column-gap: 80px;
+}
+@media (max-width: 768px) {
+  .store-grid {
+    grid-template-columns: repeat(
+      2,
+      1fr
+    ); /* Adjust columns for smaller screens */
+    column-gap: 20px; /* Adjust gap between items */
+  }
 }
