--- a/src/css/Navigation/Footer.css
+++ b/src/css/Navigation/Footer.css
@@ -2,61 +2,31 @@
   background-color: #232f3e;
   color: #fff;
   padding: 30px 20px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  display: grid;
+  font-size: 20px;
+  grid-template-columns: repeat(3, 1fr);
 }
 
-.footer-section {
-  flex: 1;
-  margin-bottom: 20px;
-  max-width: 300px;
+.footer-info {
+  grid-column: 1;
 }
 
-.footer-heading {
-  font-size: 1.2em;
-  font-weight: bold;
-  margin-bottom: 10px;
+.footer-contact {
+  grid-column: 2;
 }
 
-.footer-links {
+.footer-sales {
+  grid-column: 3;
+}
+
+.footer-info,
+.footer-contact,
+.footer-sales {
+  justify-self: center;
+  text-align: center;
+}
+ul {
   list-style: none;
   padding: 0;
-  margin: 0;
-  padding-left: 0;
-}
-
-.footer-links li {
-  margin-bottom: 8px;
-}
-
-.footer-links a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 1em;
-  display: block;
-}
-
-.footer-links a:hover {
-  text-decoration: underline;
-}
-
-.footer-social-icons {
-  display: flex;
-  margin-top: 20px;
-}
-
-.footer-social-icons a {
-  display: inline-block;
-  margin-right: 10px;
-  color: #fff;
-  font-size: 1.5em;
-}
-
-.footer-social-icons a:hover {
-  color: #ff9900;
-}
-
-.footer-legal {
-  font-size: 0.8em;
+  margin: 4px;
 }
