--- a/src/css/Navigation/header.css
+++ b/src/css/Navigation/header.css
@@ -94,3 +94,45 @@ html {
   color: #fff;
   text-decoration: none;
 }
+@media (max-width: 768px) {
+  .amazon-navbar {
+    flex-direction: column;
+    align-items: stretch;
+    padding: 10px 10px;
+  }
+
+  .search-bar {
+    margin-bottom: 10px;
+  }
+
+  .search-bar input[type="text"] {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .search-bar button {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .nav-links {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .nav-links a {
+    margin: 5px 0;
+  }
+
+  .account-options {
+    margin-top: 10px;
+  }
+
+  .account,
+  .orders,
+  .cart {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+}
