--- a/src/css/Cart/checkout.css
+++ b/src/css/Cart/checkout.css
@@ -75,25 +75,25 @@ button:hover {
   border-radius: 8px;
 }
 
-.item-name {
+.cart-item-name {
   grid-column: 2; /* Places item in the first column */
   grid-row: 1; /* Places item in the second row */
 }
-.item-image {
+.cart-item-image {
   grid-column: 1; /* Spans two columns */
   grid-row: 1; /* Places item in the first row */
   max-width: 100%;
   max-height: 100%;
 }
 
-.item-price {
+.cart-item-price {
   grid-column: 3; /* Places item in the second column */
   grid-row: 2; /* Places item in the second row */
   font-weight: bold;
   justify-self: end;
   margin: 0;
 }
-.item-quantity {
+.cart-item-quantity {
   grid-column: 2;
   grid-row: 1;
   align-self: end;
