--- a/src/css/Cart/checkout.css
+++ b/src/css/Cart/checkout.css
@@ -8,6 +8,7 @@
   background-color: #f9f9f9;
   display: flex; /* Use flexbox to control layout */
   flex-direction: column; /* Arrange items in a column */
+  margin-bottom: 20px;
 }
 
 .form-group {
@@ -37,6 +38,13 @@ input[type="text"] {
   cursor: pointer;
 }
 .prev-button {
+  padding: 10px 20px;
+  margin-top: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -48,11 +56,15 @@ input[type="text"] {
 }
 .checkout-button-next {
   padding: 10px 20px;
+  margin-top: 10px;
   background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  position: absolute;
+  bottom: 20px;
+  right: 30px;
 }
 button:hover {
   background-color: #0056b3;
