--- a/src/css/Home/home-product-display.css
+++ b/src/css/Home/home-product-display.css
@@ -6,6 +6,58 @@
   justify-content: center;
   height: 100vh; /* Optional: Set container height to full viewport height */
 }
+.slick-dots {
+  position: absolute;
+  bottom: 10px; /* Adjust the distance from the bottom */
+  width: 100%;
+  text-align: center;
+}
+
+.carousel-container {
+  overflow: hidden;
+  cursor: pointer;
+}
+.prouducts-title {
+  font-family: montserrat, sans-serif;
+  color: #333;
+  text-align: center;
+}
+.full-width-slider {
+  width: 100%; /* Make the slider take up full width */
+}
+
+.slick-slide img {
+  width: 100%; /* Make images fill the slide */
+  height: auto;
+}
+
+.slick-slide div {
+  padding: 0;
+  margin: 0;
+}
+.brand-carousel-container {
+  max-width: 1200px; /* Adjust the width of the carousel as needed */
+  margin: 0 auto;
+  margin-bottom: 70px;
+}
+
+.brand-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px; /* Adjust the height of each brand slide as needed */
+}
+
+.brand-slide img {
+  max-height: 80px; /* Adjust the maximum height of the brand logos */
+  max-width: 60%; /* Ensure the image fits within the container */
+  cursor: pointer;
+}
+
+.brand-slide img:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box-shadow */
+  transform: scale(1.1); /* Enlarge the item on hover */
+}
 
 .store-grid {
   display: grid;
