--- a/src/css/Navigation/Footer.css
+++ b/src/css/Navigation/Footer.css
@@ -1,10 +1,13 @@
 .footer-container {
   background-color: #232f3e;
   color: #fff;
-  padding: 30px 20px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   display: grid;
   font-size: 20px;
   grid-template-columns: repeat(3, 1fr);
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-info {
