--- a/src/css/Product/productDisplay.css
+++ b/src/css/Product/productDisplay.css
@@ -5,8 +5,8 @@
 }
 .grid-container {
   display: grid;
-  grid-template-columns: 2;
-  grid-template-rows: 3;
+  grid-template-columns: 1fr 2fr; /* Two columns */
+  grid-template-rows: auto auto auto auto; /* Three rows */
   width: 80%;
 }
 
@@ -26,14 +26,25 @@
   grid-row: 2;
 }
 
+.item-price {
+  grid-column: 2;
+  grid-row: 3;
+}
 .item-description {
   grid-column: 2;
   grid-row: 2;
   align-self: center;
 }
+
+.purchase-confirmed {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
 .add-button {
   grid-column: 2;
-  grid-row: 3;
+  grid-row: 4;
   width: 50%;
   height: 50px;
   background-color: #007bff;
@@ -41,6 +52,13 @@
   border-radius: 8px;
 }
 
+.goToCart-button {
+  width: 10%;
+  height: 50px;
+  background-color: #007bff;
+  cursor: pointer;
+  border-radius: 8px;
+}
 .add-button:hover {
   background-color: #0056b3; /* Change to a lighter color on hover */
 }
