--- a/src/css/Cart/checkout.css
+++ b/src/css/Cart/checkout.css
@@ -2,7 +2,7 @@
   position: relative; /* Set the positioning context for absolute positioning */
   max-width: 50%; /* Set maximum width to 50% of the page */
   margin: 0 auto;
-  padding: 40px;
+  padding: 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
   background-color: #f9f9f9;
@@ -56,13 +56,14 @@ input[type="text"] {
 }
 .checkout-button-next {
   padding: 10px 20px;
+  margin-top: 10px;
   background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   position: absolute;
-  bottom: 40px;
+  bottom: 20px;
   right: 30px;
 }
 button:hover {
